style: Prevent project list item titles from wrapping.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -757,6 +757,7 @@ body {
     border-radius: 0;
     border-left: none;
     border-right: none;
+    white-space: nowrap;
   }
 }
 
